TOC: Fix overflow

--- a/src/App.css
+++ b/src/App.css
@@ -355,6 +355,8 @@ img {
   border-top: 1px solid var(--muted-text);
   border-bottom-left-radius: 10px;
   border-top-left-radius: 10px;
+  box-sizing: border-box;
+  overflow: auto;
 }
 
 .tableInfo {
